# rome4

./: MANIFEST.in  README.md  setup.cfg
html/css/: global.css
html/javascript/: ampliconViewer.js  contextMenu.js  tooltip.js
src/html/group/: index.html
src/rome4/: rome.py
src/rome4/html/: index.html
src/rome4/html/css/: contextMenu.css
src/rome4/html/group/: index.html
src/rome4/html/javascript/: ampliconViewer.js  contextMenu.js
