[metadata]
name = ROME4
version = 0.0.1
author = Jonathan Golob
author_email = j-dev@golob.org
description = Repository of Microbiome Experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgolob/rome4
project_urls =
    Bug Tracker = https://github.com/jgolob/rome4/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pandas
    pathvalidate
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    rome4 = rome4.rome:main
